src/golden/handlers/typeerrors/test.golden/handlehasarrow.fl
	contract service GiveReply
		askFor -> (RepliesTo r)
	contract handler RepliesTo
		message (String msg)
		
	card MustUseAnArrow
		requires GiveReply gr

		event action (ClickEvent ev)
			<- gr.askFor MyReply // requires ->
			
	handler RepliesTo MyReply
		message msg 